# agorabus-nats-bridge

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
agent/: intent-card.json  owner-map.json  proof-lanes.toml  test-map.json
src/: bridge.rs  config.rs  dispatch.rs  forward.rs  hub_status.rs  hub_watcher.rs  lib.rs  main.rs  nats_config.rs  selftest.rs  status.rs
tests/: acceptance_ac1.rs  acceptance_ac2.rs  acceptance_ac3.rs  acceptance_ac4.rs  acceptance_ac5.rs  acceptance_ac6.rs  acceptance_ac7.rs  acceptance_dispatch.rs  proptest_invariants.rs
