[package]
name = "wm-busbridge"
version = "0.4.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
publish = false
description = "agorabus ↔ NATS bridge daemon for the wintermute constellation fleet"

[[bin]]
name = "wm-busbridge"
path = "src/main.rs"

[lib]
name = "wm_busbridge"
path = "src/lib.rs"

[lints.rust]
unsafe_code = "deny"
missing_docs = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }
unused_must_use = "deny"
unreachable_pub = "warn"

[lints.clippy]
# Strict everyday lints
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# BAD_RUST-aligned restrictions
undocumented_unsafe_blocks = "deny"
multiple_unsafe_ops_per_block = "deny"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
unreachable = "deny"
indexing_slicing = "warn"
mem_forget = "deny"
as_conversions = "warn"
float_arithmetic = "warn"
dbg_macro = "deny"
print_stdout = "warn"
print_stderr = "warn"

# Tame noise
module_name_repetitions = "allow"
missing_errors_doc = "warn"
missing_panics_doc = "warn"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "debuginfo"
panic = "abort"

[features]
default = []
real-hardware = []

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
# NATS client
async-nats = "0.38"
# SIGPIPE reset
sigpipe = "0.1"
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# CLI parsing
clap = { version = "4", features = ["derive", "env"] }
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Error handling
anyhow = "1"
# Async traits
async-trait = "0.1"
# Futures utilities
futures = "0.3"
# Bytes buffer for hub event ring buffer
bytes = "1"

[dev-dependencies]
proptest = "1"
tokio-test = "0.4"
